# tasgi

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  __init__.py  benchmark_app.py  requirements-local.txt  requirements-pypi.txt  run_benchmarks.py
benchmarks/fastapi_app/: __init__.py  app.py  main.py
benchmarks/shared/: __init__.py  config.py  runtime_info.py  workload.py
benchmarks/tasgi_app/: __init__.py  app.py  main.py
docs/: auth.md  deployment.md  examples.md  getting-started.md  handlers.md  http2.md  index.md  openapi.md  routing.md  runtime.md  testing.md  threading.md  websocket.md
examples/: README.md
examples/demo_app/: app.py  main.py
examples/modular_api/: app.py  main.py  models.py  services.py
examples/modular_api/routers/: admin.py  public.py  tasks.py
examples/service_api/: app.py  main.py  models.py  services.py
src/tasgi/: __init__.py  app.py  asgi.py  asgi_server.py  config.py  dependencies.py  docs.py  exceptions.py  http2.py  http_parser.py  lifecycle.py  main.py  middleware.py  request.py  response.py  routing.py  runtime.py  schema.py  state.py  types.py  websocket.py  wsproto.py
src/tasgi/auth/: __init__.py  backends.py  base.py  (+3 more)
tests/: __init__.py  support.py  test_app.py  test_asgi_runtime.py  test_asgi_server.py  test_auth.py  test_demo_app.py  test_errors.py  test_http2_server.py  test_http_parser.py  test_openapi.py  test_request_response.py  test_router.py  test_streaming.py  test_tasgi_app.py  test_thread_runtime.py  test_websocket.py
